--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 				linesThe small text that needs a lot of linesThe small text that needs a lot of lines</h4>
 			<button class="main-btn">Подать заявку</button>
 		</div>
-		<img class="possible" src="/assets/illustration (1).png" alt="qwfqwf">
+		<img class="possible" src="/assets/main-img.png" alt="main-img.png">
 	</main>
 </body>
 
