--- a/index.html
+++ b/index.html
@@ -9,22 +9,28 @@
 </head>
 
 <body>
-	<header class="header">
-		<div class="logo-block">
-			<img src="./assets/logo.png" alt="logo.png">
-		</div>
-		<h2 class="logo-title">Company name</h2>
-	</header>
-	<main class="main-section">
-		<div class="main-section__block">
-			<h1 class="main-title">The large text that needs two lines </h1>
-			<h4 class="main-description">The small text that needs a lot of lines The small text that needs a lot of linesThe
-				small text that needs a lot of linesThe small text that needs a lot of linesThe small text that needs a lot of
-				linesThe small text that needs a lot of linesThe small text that needs a lot of lines</h4>
-			<button class="main-btn">Подать заявку</button>
-		</div>
-		<img class="possible" src="/assets/main-img.png" alt="main-img.png">
-	</main>
+	<div class="section">
+		<header class="header">
+			<div class="header-block">
+				<div class="logo-block">
+					<img src="./assets/logo.png" alt="logo.png">
+				</div>
+				<h2 class="logo-title">Company name</h2>
+			</div>
+		</header>
+		<main class="main-section">
+			<div class="main-section__block">
+				<h1 class="main-title">The large text that needs two lines </h1>
+				<h4 class="main-description">The small text that needs a lot of lines The small text that needs a lot of
+					linesThe
+					small text that needs a lot of linesThe small text that needs a lot of linesThe small text that needs a lot of
+					linesThe small text that needs a lot of linesThe small text that needs a lot of lines</h4>
+				<button class="main-btn">Подать заявку</button>
+				<img class="possible" src="/assets/main-img.png" alt="main-img.png">
+			</div>
+		</main>
+	</div>
+
 </body>
 
 </html>
