--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
 					linesThe small text that needs a lot of linesThe small text that needs a lot of lines</h4>
 				<button class="main-btn">Подать заявку</button>
 				<img class="possible" src="/assets/main-img.png" alt="main-img.png">
+				<img class="possible-mobile" src="/assets/main-img-mobile.png" alt="main-img-mobile.png">
 			</div>
 		</main>
 	</div>
