--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
 					small text that needs a lot of linesThe small text that needs a lot of linesThe small text that needs a lot of
 					linesThe small text that needs a lot of linesThe small text that needs a lot of lines</h4>
 				<button class="main-btn">Подать заявку</button>
-				<img class="possible" src="/assets/main-img.svg" alt="main-img.png">
-				<img class="possible-mobile" src="/assets/main-img-mobile.svg" alt="main-img-mobile.png">
+				<img class="possible" src="/assets/main-img.svg" alt="main-img.svg">
+				<img class="possible-mobile" src="/assets/main-img-mobile.svg" alt="main-img-mobile.svg">
 			</div>
 		</main>
 	</div>
